Fixes swatches and twitter metadata alignment.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -213,11 +213,16 @@ a, .widget.twitter ul li a {
 	}
 }
 
-.widget.twitter ul li div > span {
-	font-size: .8em;
+.widget.twitter {
+	ul li div > span {
+		font-size: .8em;
+	}
 	a {
 		font-size: inherit;
 		text-decoration: none;
+	}
+	.twitter-profile-pic {
+		min-height: 90px;
 	}
 }
 
